--- a/MITx MicroMaster in Statistic and DataScience/Cheatsheet/CheatSheet2.tex
+++ b/MITx MicroMaster in Statistic and DataScience/Cheatsheet/CheatSheet2.tex
@@ -105,6 +105,109 @@
 \setlength{\columnsep}{2pt}
 
 
+\section{Classification}
+\begin{description}
+	\item[Linear Separation] Training examples $S_n$ are {\it linearly separable} if there exists a parameter vector $\widehat{\theta}$ and offset parameter $\widehat{\theta}_0$ such that $y^{(i)}\left(\widehat{\theta}\cdot x^{(i)}+\widehat{\theta}_0\right)>0$ for all $i=1,\dots,n$.
+	\item[Perceptron Algorithm]~
+		\begin{itemize}
+			\item Will find one classifier if data are linear separable
+			\item {Initialization} $\theta = 0$
+			\item   For  {$t=1,\dots,T$}, {$i=1,\dots,n$}
+			\item If {$y^{(i)}\left(\theta\cdot x^{(i)}+\theta_0\right)\leq0$}
+					$$\theta=\theta+y^{(i)}x^{(i)}$$
+					$$\theta_0=\theta_0+y^{(i)}$$
+		\end{itemize}
+	\item[Convergence of Perceptron]~
+		\begin{itemize}
+			\item There exists $\theta^*$ such that $\frac{y^{(i)}\left(\theta^*\cdot x^{(i)}\right)}{||{x^{(i)}}||}\geq\gamma$ for all $i=1,\dots,n$ for some $\gamma>0.$
+			\item All examples are bounded $||{x^{(i)}}||\leq R$, $i=1,\dots,n.$
+		\end{itemize}
+		Then the number $k$ of updates made by the perceptron algorithm is bounded by $\dfrac{R^2}{\gamma^2}.$
+
+	\item[Hinge Loss]~
+			\begin{itemize}
+			\item[] {\bf Distance to a plane} $d = \dfrac{|\theta \cdot x + \theta_0|}{||\theta||}$
+			\item[] {\bf Hinge Loss} 
+				$$\text{Loss}_h\left(z\right)=\begin{cases}
+				0&\text{if }z\geq1\\
+				1-z&\text{if }z<1
+				\end{cases}$$
+				with $z=y^{(i)}\left(\theta\cdot x^{(i)}+\theta_0\right)$.
+				
+		\end{itemize}
+		\begin{center}
+			\begin{tikzpicture}[scale=0.5]
+			\draw[thick,dashed] (0,5) -- (1,0);
+			\draw[ultra thick,-] (1,5.25) -- (2,0.25);
+			\draw[thick,dashed] (2,5.5) -- (3,0.5);
+			\node[right] at (3,1) {$\theta\cdot x+\theta_0=-1$};
+			\node[above right] at (2.9,1.25) {negative margin boundary};
+			\node[above left] at (0.75,0.5) {positive margin boundary};
+			\node[left] at (0.8,0.25) {$\theta\cdot x +\theta_0=1$};
+			\draw [fill,red] (2.3,4) circle [radius=0.075];
+			\draw [fill,red] (2.8,2.5) circle [radius=0.075];
+			\draw[ultra thick, ->] (1.5,2.75) -- (0.75,2.6);
+			\node[below right] at (2,0.3) {decision boundary};
+			\node[below right] at (2,-0.2) {$\theta\cdot x+\theta_0=0$};
+			\draw [fill, blue] (-0.5,4) circle [radius=0.075];
+			\draw [fill, blue] (-0.75,3) circle [radius=0.075];
+			\draw[thick, -] (1.25,4) -- (2.25,4.2);
+			\draw[thick] (1.75,4.2) to [out=90,in=180] (3,4.95);
+			\node[right] at (3,5) {$\gamma_i\left(\theta,\theta_0\right)=\dfrac{y^{(i)}\left(\theta\cdot x^{(i)}+\theta_0\right)}{||{\theta}||}$};
+			\end{tikzpicture}
+		\end{center}
+
+		\begin{itemize}
+			\item[] {\bf Distance from Decision to Margin} is $\dfrac{1}{\theta}$ after scaling (k = 1)
+			\item[] {\bf Objective Function} $$J\left(\theta,\theta_0\right)=\frac{1}{n}\sum_{i=1}^{n}\left[\text{Loss}_h\left(y^{(i)}\left(\theta\cdot x^{(i)}+\theta_0\right)\right)+\frac{\lambda}{2}\lVert\theta\rVert^2\right]$$
+	$\lambda$ is the regularization factor.
+			\item [] {\bf Derivative}
+				\begin{itemize}
+					\item if Loss $>$ 0 $\Delta J = - y^{i} X^{(i)}$
+					\item if Loss $=$ 0 $\Delta J = 0$
+				\end{itemize}
+		\end{itemize}
+
+	\item[Recommender Systems]~
+		$$Y_{n*m}$$ n users, m movies. Key is to borrow preferences from other users and measure how much a user is close to others
+		\begin{itemize}
+			\item[] {\bf $K$-Nearest Neighbor Method} Does not allow to identify hidden structure in the data
+				$$\widehat{Y}_{ai}=\dfrac{\sum\limits_{b\in\text{KNN}(a)}\text{sim}(a,b)Y_{bi}}{\sum\limits_{b\in\text{KNN}(a)}\text{sim}(a,b)}$$
+			\item[] {\bf Collaborative Filtering with Matrix Factorization}
+				$$Y_{n*m} = U_{n*d} V_{d*m}^T$$
+				$$J(X)=\sum_{(a,i)\in D}\frac{1}{2}\left(Y_{ai}-\left[UV^\intercal\right]_{ai}\right)^2+\frac{\lambda}{2}\left(\sum_{a,k}U_{ak}^2+\sum_{i,k}V_{ik}^2\right).$$
+				To find the solution, we fix (initialize) $U$ (or $V$) and minimize the objective with respect to $V$ (or $U$). We plug-in the result back to the objective and minimize it with respect to $U$ (or $V$). We repeat this alternating process until there is no change in the objective function.
+				\item For the case $k=1$. Then, $U_{a1}=u_a$ and $V_{i1}=v_i$. If we initialize $u_a$ to some values, then we have to optimize the function
+				$$\sum_{(a,i)\in D}\frac{1}{2}\left(Y_{ai}-u_av_i\right)^2+\frac{\lambda}{2}\sum_{i}v_{i}^2.$$
+		\end{itemize}
+\end{description}
+
+\section{Kernel}
+Inner products between high dim vectors are cheap. Use kernel but not explicitly the high dim vector representation
+$$K\left(x,x'\right)=\phi(x)\cdot\phi(x')$$
+\begin{description}
+	\item[Kernel Perceptron]
+		$$\theta=\sum_{j=1}^{n}\alpha_jy^{(j)}\phi\left(x^{(j)}\right)$$
+		$$\theta\cdot\phi\left(x^{(i)}\right)=\sum_{j=1}^{n}\alpha_jy^{(j)}\underbrace{\phi\left(x^{(j)}\right)\cdot\phi\left(x^{(i)}\right)}_{K\left(x^{(j)},x^{(i)}\right)}$$
+		\begin{itemize}
+			\item   For  {$t=1,\dots,T$}, {$i=1,\dots,n$}
+			\item If {$y^{(i)}\sum\limits_{j=1}^{n}\alpha_jy^{(j)}K\left(x^{(j)},x^{(i)}\right)\leq0$}
+						$$\alpha_j=\alpha_j+1$$
+		\end{itemize}
+	\item[Kernel Composition Rules]~
+		\begin{enumerate}
+			\item $K(x,x')=1$ is a kernel function.($\phi(x)=1$)
+			\item Let $f:\mathbb{R}^d\rightarrow\mathbb{R}$ and $K(x,x')$ is a kernel. Then so is $\widetilde{K}(x,x')=f(x)K(x,x')f(x').$  ($\phi(x) = f(x)\phi(x)$)
+			\item If $K_1(x,x')$ and $K_2(x,x')$ are kernels, then $K(x,x')=K_1(x,x')+K_2(x,x')$ is a kernel. $\phi(x) = [\phi_1(x), \phi_2(x)]^T$
+			\item If $K_1(x,x')$ and $K_2(x,x')$ are kernels, then $K(x,x')=K_1(x,x')K_2(x,x')$ is a kernel.
+		\end{enumerate}
+	\item[Radial Basis Kernel]
+		$$K(x, x') = e^{-\dfrac{1}{2}||x-x'||^2}$$
+\end{description}
+
+
+
+
 \section{Neural Network}
 \begin{description}
 	\item {\bf Motivation}: learn classifier and feature representation at the same time to improve performance. 
