finished python basic

--- a/SD in Python/Python Bascis.ipynb
+++ b/SD in Python/Python Bascis.ipynb
@@ -18,6 +18,10 @@
     "2. Exponential \n",
     "3. Multiplication & Division\n",
     "4. Addition & Subtraction\n",
+    "5. Relational (==, !=, <=, <. >=, >)\n",
+    "6. Logical not\n",
+    "7. Logical and\n",
+    "8. Logical or\n",
     "\n",
     "A **statement** is an instruction that python interpreter can execute\n",
     "\n",
@@ -30,9 +34,82 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "51355ebd",
+   "metadata": {},
+   "source": [
+    "## String, List, Tuple\n",
+    "\n",
+    "**Index Operator**\n",
+    "- From Begining: 0, 1, 2, 3, ...\n",
+    "- From End ..., -4, -3, -2, -1\n",
+    "- slice [n: m] does not include m\n",
+    "- .count method for counting \n",
+    "- .index for the loc\n",
+    "- imutable items (string, list) will lead to the same object"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "d865a0d7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pzpzpzpzpz\n"
+     ]
+    }
+   ],
+   "source": [
+    "let = \"z\"\n",
+    "let_two = \"p\"\n",
+    "c = let_two + let\n",
+    "m = c*5\n",
+    "print(m)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "6e383709",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b = \"My, what a lovely day\"\n",
+    "x = b.split(',')\n",
+    "z = \"\".join(x)\n",
+    "y = z.split()\n",
+    "a = \"\".join(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "7adf3637",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Mywhatalovelyday'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c3932800",
+   "id": "9e462627",
    "metadata": {},
    "outputs": [],
    "source": []
