--- a/SD in Python/Python Bascis.ipynb
+++ b/SD in Python/Python Bascis.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51355ebd",
+   "id": "41360d81",
    "metadata": {},
    "source": [
     "## String, List, Tuple\n",
@@ -44,75 +44,42 @@
     "- From Begining: 0, 1, 2, 3, ...\n",
     "- From End ..., -4, -3, -2, -1\n",
     "- slice [n: m] does not include m\n",
-    "- .count method for counting \n",
-    "- .index for the loc\n",
-    "- imutable items (string, list) will lead to the same object"
+    "\n",
+    "\n",
+    "**Alias** b=a\n",
+    "- Depending on if a is muttable or inmuttable\n",
+    "\n",
+    "**Inmutable**\n",
+    "```python\n",
+    "a = 'banana'\n",
+    "b = 'banana'\n",
+    "\n",
+    "a is b   # True\n",
+    "a == b # True\n",
+    "```\n",
+    "\n",
+    "**Mutable**\n",
+    "```python\n",
+    "a = [1,2,3]\n",
+    "b = [1,2,3]\n",
+    "a is b # False\n",
+    "a == b # True\n",
+    "```"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "d865a0d7",
+   "cell_type": "markdown",
+   "id": "7fb23bb6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pzpzpzpzpz\n"
-     ]
-    }
-   ],
    "source": [
-    "let = \"z\"\n",
-    "let_two = \"p\"\n",
-    "c = let_two + let\n",
-    "m = c*5\n",
-    "print(m)"
+    "## File IO\n",
+    "\n",
+    "**Method**\n",
+    "- obj.write(string): add a string to the end of the file\n",
+    "- obj.read(n): read and return a string of n characters or entire file as a single string if n not provided\n",
+    "- obj.readline():read next line\n",
+    "- obj.readlines(n): read lines as list of strings"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "6e383709",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "b = \"My, what a lovely day\"\n",
-    "x = b.split(',')\n",
-    "z = \"\".join(x)\n",
-    "y = z.split()\n",
-    "a = \"\".join(y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "7adf3637",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Mywhatalovelyday'"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9e462627",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
