--- a/SD in Python/Python Bascis.ipynb
+++ b/SD in Python/Python Bascis.ipynb
@@ -235,9 +235,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6a66f680",
+   "metadata": {},
+   "source": [
+    "# OOP\n",
+    "\n",
+    "Allow you to combine method and data. Also class inheritance allows better reuse of codes"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75c3d199",
+   "id": "1ec60bcd",
    "metadata": {},
    "outputs": [],
    "source": []
