init c in app of quant

--- a/Application of Quant Method with Python/Math/Linear Algebra.ipynb
+++ b/Application of Quant Method with Python/Math/Linear Algebra.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f426f142",
+   "id": "46d827bc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,41 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e663f8a8",
+   "id": "d354222a",
+   "metadata": {},
+   "source": [
+    "# Basic Linear Algebra"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0184c694",
+   "metadata": {},
+   "source": [
+    "## Eigenvalues and Eigenvectors\n",
+    "\n",
+    "\n",
+    "For a square matrix A:\n",
+    "1. Determinant of A equals the product of the eigenvalues\n",
+    "2. Trace of A equals the sum of the eigenvalues\n",
+    "3. If a is symmetric, all of its eigenvalues are real\n",
+    "4. If A is invertible. Then the eigenvalues of $A^{-1}$ are $\\dfrac{1}{\\lambda_i}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "2b0dacaf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A = np.array([[1,2],[2,1]])\n",
+    "eval"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "52c95695",
    "metadata": {},
    "source": [
     "# Numpy Implementation"
@@ -20,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8db2fdab",
+   "id": "8bef0063",
    "metadata": {},
    "source": [
     "## Broadcasting\n",
@@ -37,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "dc22efd6",
+   "id": "3ae8b54d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e48730e8",
+   "id": "27e2eece",
    "metadata": {},
    "outputs": [],
    "source": []
