init c in app of quant

--- a/Application of Quant Method with Python/Math/Linear Algebra.ipynb
+++ b/Application of Quant Method with Python/Math/Linear Algebra.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "46d827bc",
+   "id": "5277f67f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,18 +12,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d354222a",
+   "id": "701d5cd6",
    "metadata": {},
    "source": [
-    "# Basic Linear Algebra"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0184c694",
-   "metadata": {},
-   "source": [
-    "## Eigenvalues and Eigenvectors\n",
+    "# Eigenvalues and Eigenvectors\n",
     "\n",
     "\n",
     "For a square matrix A:\n",
@@ -35,18 +27,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "2b0dacaf",
+   "execution_count": 8,
+   "id": "fa6e74ff",
    "metadata": {},
    "outputs": [],
    "source": [
     "A = np.array([[1,2],[2,1]])\n",
-    "eval"
+    "# columns of evecs are eigenvectors of A\n",
+    "evals, evecs = np.linalg.eig(A)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "52c95695",
+   "id": "2e705b5f",
+   "metadata": {},
+   "source": [
+    "# QR Decomposition\n",
+    "$A = QR$\n",
+    "\n",
+    "- Q is an orthogonal matrix ($Q^TQ=I$)\n",
+    "- R is an upper triagular Matrix\n",
+    "\n",
+    "If a square matrix A is nonsigular, then QR factorization is unique"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "4abd4b41",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def QR_Decomposition(A):\n",
+    "    \"\"\"\n",
+    "    https://python.quantecon.org/qr_decomp.html\n",
+    "    \n",
+    "    QR decomposition is equivalent to Gram-Schmidt process (with Q as the resulting independent matrix)\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    \n",
+    "    n, m = A.shape\n",
+    "    \n",
+    "    Q = np.empty((n, n))\n",
+    "    u = np.empty((n, n))\n",
+    "    \n",
+    "    u[:, 0] = A[:, 0]\n",
+    "    Q[:, 0] = u[:, 0] / np.linalg.norm(u[:, 0])\n",
+    "    \n",
+    "    for i in range(1, n):\n",
+    "        u[:, i] = A[:, i]\n",
+    "        for j in range(i):\n",
+    "            # Gram-Schmidt process\n",
+    "            u[:, i] -= (A[:, i] @ Q[:, j]) * Q[:, j]\n",
+    "        Q[:, i] = u[:, i] / np.linalg.norm(u[:, i])\n",
+    "        \n",
+    "    R = np.zeros((n, m))\n",
+    "    for i in range(n):\n",
+    "        for j in range(i, m):\n",
+    "            R[i, j] = A[:, j] @ Q[:, i]\n",
+    "            \n",
+    "    return Q, R\n",
+    "\n",
+    "A = np.array([[1.0, 1.0, 0.0], [1.0, 0.0, 1.0], [0.0, 1.0, 1.0]])\n",
+    "Q, R = QR_Decomposition(A)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e6789e35",
    "metadata": {},
    "source": [
     "# Numpy Implementation"
@@ -54,7 +102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8bef0063",
+   "id": "f4278952",
    "metadata": {},
    "source": [
     "## Broadcasting\n",
@@ -71,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "3ae8b54d",
+   "id": "724488f2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27e2eece",
+   "id": "891550b5",
    "metadata": {},
    "outputs": [],
    "source": []
