init c in app of quant

--- a/Application of Quant Method with Python/Math/Linear Algebra.ipynb
+++ b/Application of Quant Method with Python/Math/Linear Algebra.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "5277f67f",
+   "id": "946a90d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "701d5cd6",
+   "id": "7b0f89fd",
    "metadata": {},
    "source": [
     "# Eigenvalues and Eigenvectors\n",
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "fa6e74ff",
+   "id": "00358a68",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e705b5f",
+   "id": "887189c1",
    "metadata": {},
    "source": [
     "# QR Decomposition\n",
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "4abd4b41",
+   "id": "21fe6da6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,63 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6789e35",
+   "id": "71d4eb7a",
+   "metadata": {},
+   "source": [
+    "# Singular Value Decomposition\n",
+    "\n",
+    "Matrix **X** (m*n) of rank p\n",
+    "- n: sample\n",
+    "- m: attribution\n",
+    "\n",
+    "$X = U\\Sigma V^T$\n",
+    "- $UU^T=I$, $U^TU=I$\n",
+    "- $VV^T=I$, $V^TV=I$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "650ff860",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "U, S, V =\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(array([[-0.29186613,  0.65946664, -0.09420768, -0.6792746 ,  0.09812666],\n",
+       "        [-0.49908744, -0.33887884, -0.57264381, -0.11362608, -0.54336087],\n",
+       "        [-0.51143062, -0.2538992 ,  0.78739929, -0.16025057, -0.16821423],\n",
+       "        [-0.51935197,  0.48181491, -0.02660546,  0.70292526,  0.057586  ],\n",
+       "        [-0.36665807, -0.39198784, -0.20615158, -0.07675264,  0.81456611]]),\n",
+       " array([1.34162221, 0.52158107]),\n",
+       " array([[-0.71454801, -0.69958641],\n",
+       "        [ 0.69958641, -0.71454801]]))"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "X = np.random.rand(5,2)\n",
+    "U, S, V = np.linalg.svd(X,full_matrices=True)  # full SVD\n",
+    "Uhat, Shat, Vhat = np.linalg.svd(X,full_matrices=False) # economy SVD\n",
+    "print('U, S, V =')\n",
+    "U, S, V"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7559bb53",
    "metadata": {},
    "source": [
     "# Numpy Implementation"
@@ -102,7 +158,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4278952",
+   "id": "c881818e",
    "metadata": {},
    "source": [
     "## Broadcasting\n",
@@ -118,18 +174,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "724488f2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.linalg.norm?"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "891550b5",
+   "id": "015374ed",
    "metadata": {},
    "outputs": [],
    "source": []
