init c in app of quant

--- a/Application of Quant Method with Python/Math/Linear Algebra.ipynb
+++ b/Application of Quant Method with Python/Math/Linear Algebra.ipynb
@@ -103,9 +103,7 @@
     "- n: sample\n",
     "- m: attribution\n",
     "\n",
-    "$X = U\\Sigma V^T$\n",
-    "- $UU^T=I$, $U^TU=I$\n",
-    "- $VV^T=I$, $V^TV=I$"
+    "$X = U\\Sigma V^T = \\sigma_1U_1V_1^T + ... + \\sigma_pU_pV_p^T$\n"
    ]
   },
   {
